# music_player

./: Cargo.toml  build.rs
docs/: messages.md  model.md
src/: app.rs  config.rs  event.rs  events.rs  input.rs  main.rs  run.rs
src/audio/: mod.rs  player.rs
src/db/: audio_scanner.rs  mod.rs
src/fs/: mod.rs
src/page/: app.rs  file_list.rs  mod.rs
src/ui/: base_ui.rs  mod.rs
