[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cpal = "0.15.2"
crossterm = { version = "0.26.1", features = ["event-stream"] }
ratatui = { version = "0.24.0", features = ["all-widgets", "macros", "serde"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["windows-sys", "full"] }
toml_edit = { version = "0.19.11", features = ["serde"] }
walkdir = "2.3.3"
dirs = "5.0.1"
async-trait = "0.1.74"
once_cell = "1.18.0"
directories = "5.0.1"
futures = "0.3.29"
tokio-util = "0.7.10"
async-recursion = "1.0.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
async-stream = "0.3.5"
tokio-stream = "0.1.14"
ffmpeg-next = "6.1.1"
ringbuf = "0.3.3"

[features]
opus = []
